# xaux

./: README.md  install_protection_hook.sh  make_release_branch.py  make_release_branch.sh  pyproject.toml  release.py  rename_release_branch.py  version.sh
tests/: _test_helpers.py  _test_jobmanager.py  clean.sh  conftest.py  cronjob_example.py  pytest_all_versions.sh  test_afs.py  test_class_property.py  test_class_tools.py  test_deliberate_failure_and_protection.py  test_eos.py  test_fs.py  test_fs_afs.py  test_fs_api.py  test_fs_eos.py  test_function_tools.py  test_general_tools.py  test_max_lock_time.py  test_protectfile.py  test_protectfile_max_lock_time.py  test_singleton.py  test_version.py
xaux/: __init__.py  class_tools.py  fs.py  general.py  jobmanager.py  protectfile.py  test_helpers.py
xaux/automation/: __init__.py  collimation.py  da.py  manager.py  template.py
xaux/dev_tools/: __init__.py  gh.py  package_manager.py  pypi.py  release_tools.py
xaux/fs/: __init__.py  afs.py  eos.py  eos_methods.py  fs.py  fs_methods.py  io.py  temp.py
xaux/tools/: __init__.py  class_property.py  class_tools.py  function_tools.py  general_tools.py  gh.py  protectfile.py  release_tools.py  singleton.py
