[tool.poetry]
name = "xaux"
version = "0.0.0"
description = "Support tools for Xsuite packages"
authors = ["Frederik Van der Veken <frederik@cern.ch>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
