[tool.poetry]
name = "xaux"
version = "0.3.3"
description = "Support tools for Xsuite packages"
authors = ["Frederik F. Van der Veken <frederik@cern.ch>",
           "Thomas Pugnat <thomas.pugnat@cern.ch>",
           "Konstantinos Paraschou <konstantinos.paraschou@cern.ch"
]
readme = "README.md"
license = "Apache 2.0"
include = ["LICENSE", "NOTICE"]


[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = ">=7.3"

[tool.poetry.extras]
tests = ["pytest"]

[build-system]
# Needed for pip install -e (BTW: need pip version 22)
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-ra --durations=10 --durations-min=1"
python_functions = ["test_"]
testpaths = [
    "tests",
]

